--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,7 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/junit/junit
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.10.0'
 
 }
